Fix club names in club boxes on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -1484,7 +1484,7 @@ button.web_button:hover {
 		margin: 0 5%;	
 	}
 	.club_info {
-		width: 95%;
+		width: 90%;
 		margin-top: 30px;
 	}
 	.seperate {
